--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,17 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configurações</string>
     <string name="title_activity_mapa_uft">Mapa</string>
     <string name="title_activity_ru">Restaurante Universitário</string>
     <string name="title_activity_telefone">Telefones uteis</string>
     <string name="title_activity_telefone2">telefone2</string>
     <string name="title_activity_telefone3">telefone3</string>
-    <string name="TabOne">Primeira tab</string>
-    <string name="tabThree">Terceira Tab</string>
-    <string name="tabTwo">Segunda</string>
-    <string name="textoFone">TEXTAO</string>
+    <string name="TabOne">Contatos UFT</string>
+    <string name="tabThree">Contatos Palmas</string>
+    <string name="tabTwo">Contatos CA</string>
+    <string name="textoFone">Lista UFT</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_mapa">Mapa UFT</string>
+    <string name="destino">Destino</string>
 </resources>
